# gapless

./: .gitignore  README.md  meson.build
data/: app.gschema.xml
po/: POTFILES.in  be.po  da.po  de.po  es.po  et.po  eu.po  fi.po  fr.po  g4music.pot  hu.po  id.po  it.po  ja.po  nl.po  oc.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: action-handles.vala  application.vala  gresource.xml  meson.build
src/gtk/: help-overlay.blp  help-overlay.ui  mini-bar.blp  music-list.blp  play-bar.blp  play-panel.blp  play-panel.ui  preferences.blp  preferences.ui  store-panel.blp  store-panel.ui
src/ui/: dialogs.vala  leaflet.vala  mini-bar.vala  music-list.vala  music-widgets.vala  paintables.vala  peak-bar.vala  play-bar.vala  play-panel.vala  preferences.vala  stable-label.vala  store-panel.vala  taglist-dialog.vala  window.vala
src/utils/: music-library.vala  music.vala
